# integrate_module

./: .gitignore  .gitmodules  README.md  integrate_rejection.py  pypi_build_script  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml
doc/: Makefile  README  algorithms.rst  conf.py  conf_old.py  contributions.rst  format.rst  format_wells.rst  gettingstarted.rst  index.rst  install.rst  modules.rst  notebooks.rst  references.rst  requirements.txt  workflow.rst
doc/algorithms/: algJulia.rst  algMatlab.rst  algPython.rst
doc/modules/: integrate.rst  integrate_io.rst  integrate_plot.rst  integrate_rejection.rst
examples/: cleanup_data.sh  ex_pyvista.ipynb  ex_pyvista.py  integrate_01_getting_started.ipynb  integrate_01_getting_started.py  integrate_01_getting_started_no_forward.py  integrate_case_evidence_approximation.ipynb  integrate_case_evidence_approximation.py  integrate_case_jesper.py  integrate_case_simpleprior.ipynb  integrate_case_simpleprior.py  integrate_daniel.py  integrate_data_similarity.py  integrate_daugaard.py  integrate_daugaard_multi_prior.ipynb  integrate_daugaard_multi_prior.py  integrate_daugaard_multi_prior_multi_data.ipynb  integrate_daugaard_multi_prior_multi_data.py  integrate_daugaard_multiprior.py  integrate_daugaard_simple.py  integrate_daugaard_simple_plot.py  integrate_dual_data.py  integrate_esbjerg.ipynb  integrate_esbjerg.py  integrate_esbjerg_discrete_data.py  integrate_esbjerg_seperate_gex.py  integrate_ex_export_3d_cube.m  integrate_fangel_generic.py  integrate_fraastad.ipynb  integrate_fraastad.py  integrate_gaussian_noise.ipynb  integrate_gaussian_noise.py  integrate_getting_dual_data.py  integrate_getting_posterior_only.py  integrate_getting_started.ipynb  integrate_getting_started.py  integrate_getting_started_no_forward.ipynb  integrate_getting_started_no_forward.py  integrate_getting_started_posterior_only.py  integrate_geus_prior.py  (+43 more)
examples/USF/: FINAL_sTEMprofiler_test_HM.stm  FINAL_sTEMprofiler_test_LM.stm  gaaem_example.py  test_usf_read.py
examples/USF/USF_Files_Unknown/: ._Coords_sTEMprofiler.txt  ._L001_S001_2025_0108_104414.usf  Coords_sTEMprofiler.txt  L001_S001_2025_0108_104414.usf  L001_S002_2025_0108_104614.usf  L001_S003_2025_0108_104756.usf  L001_S004_2025_0108_104938.usf  L001_S005_2025_0108_105132.usf  L001_S006_2025_0108_105332.usf  L001_S007_2025_0108_105508.usf  L001_S008_2025_0108_105614.usf  L001_S009_2025_0108_105759.usf  (+4 more)
examples/dev/: ex_pyvista.ipynb  ex_pyvista.py  integrate_case_jesper.py  integrate_cprofile.py  integrate_daugaard.py  integrate_daugaard_multiprior_shapefile.py  integrate_daugaard_shapefile.py  integrate_daugaard_simple.py  integrate_daugaard_simple_plots.m  integrate_fraastad.m  integrate_fraastad_cumthick.ipynb  integrate_fraastad_cumthick.py  integrate_plot_elevation_movie.m  integrate_plot_examples.py  integrate_profile.py  integrate_small_test.py  likelihood_estimation.py
integrate/: __init__.py  integrate.py  integrate_borehole.py  integrate_io.py  integrate_plot.py  integrate_rejection.py  integrate_rejection_cli.py  integrate_timing_cli.py
scripts/: cmake_build_script_DebianUbuntu_gatdaem1d.sh  cmake_build_script_homebrew_gatdaem1d.sh  cmake_build_script_ubuntu_gatdaem1d.sh  integrate_rejection.py
streamlit/: CLAUDE.md  ig_data.py  ig_forward.py  ig_plot.py  ig_prior.py  ig_rejection.py  integrate_www.py  requirements.txt  run_app.sh  streamlit_app.py
(+23 files in other folders)
