[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrate"
version = "0.2.6"
description = "Localized probabilistic data integration"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Thomas Mejer Hansen", email = "tmeha@geo.au.dk" }]
keywords = ["inversion","electromagnetic", "geophysics", "geology", "prior", "tarantola"]
classifiers = [
    'License :: OSI Approved',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.8.3", 
    "h5py>=3.10.0",
    "scipy",
    "psutil",
    "tqdm>=4.66.2",
    "jupyter>=1.0.0",
    "jupytext",
    "pandas",
    "pyvista",
    "ga-aem-forward-win; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[project.scripts]
integrate_timing = "integrate.integrate_timing:main"
integrate_rejection = "integrate.integrate_cli:main"

[tool.setuptools]
packages = ["integrate"]
