[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geointegrate"
version = "0.2.13"
description = "Localized probabilistic data integration"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Thomas Mejer Hansen", email = "tmeha@geo.au.dk" }]
keywords = ["inversion","electromagnetic", "geophysics", "geology", "prior", "tarantola"]
classifiers = [
    'License :: OSI Approved',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
dependencies = [
    "numpy",
    "matplotlib", 
    "h5py",
    "scipy",
    "psutil",
    "tqdm",
    "requests",
    "ga-aem-forward-win; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]
all=[
    "jupyter>=1.0.0",
    "jupytext",
    "pandas",
    "pyvista",
]

[project.scripts]
integrate_timing = "integrate.integrate_timing_cli:main"
integrate_rejection = "integrate.integrate_rejection_cli:main"

[tool.setuptools]
packages = ["integrate"]
