[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrate_module"
version = "0.32"
description = "Localized probabilistic data integration"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Thomas Mejer Hansen", email = "tmeha@geo.au.dk" }]
license = {text = "MIT"}
keywords = ["inversion","electromagnetic", "geophysics", "geology", "prior", "tarantola"]
classifiers = [
    'Programming Language :: Python :: 3',
]
dependencies = [
    "numpy",
    "matplotlib",
    "h5py",
    "scipy",
    "psutil",
    "tqdm",
    "requests",
    "geoprior1d>=0.9",
    "ga-aem-forward-win; platform_system == 'Windows'",
    "jupyter>=1.0.0",
    "jupytext",
    "pandas",
    "pyvista",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[project.scripts]
integrate_timing = "integrate.integrate_timing_cli:main"
integrate_rejection = "integrate.integrate_rejection_cli:main"
hdf5_info = "integrate.integrate_hdf5_info_cli:main"

[tool.setuptools]
packages = ["integrate"]
